# mcpservers-and-tools

./: README.md
langchain/: README.md
mcpservers/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  build_all_servers.sh  test_appsec_sast.sh
mcpservers/appsec_base/: Dockerfile  README.md  appsec_base_server.py  pyproject.toml  requirements.txt
mcpservers/appsec_container/: Dockerfile  README.md  appsec_container_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_container/tools/: __init__.py  grype_tool.py  trivy_tool.py
mcpservers/appsec_dast/: Dockerfile  README.md  appsec_dast_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_dast/tools/: __init__.py  metasploit_tool.py  nikto_tool.py  sqlmap_tool.py  w3af_tool.py  wapiti_tool.py  zap_tool.py
mcpservers/appsec_iac/: Dockerfile  README.md  appsec_iac_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_iac/tools/: __init__.py  checkov_tool.py  terrascan_tool.py
mcpservers/appsec_k8s/: Dockerfile  README.md  appsec_k8s_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_k8s/tools/: __init__.py  kube_bench_tool.py  kube_hunter_tool.py  kubescape_tool.py
mcpservers/appsec_mobile/: Dockerfile  README.md  appsec_mobile_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_mobile/tools/: __init__.py  mobsf_tool.py
mcpservers/appsec_sast/: Dockerfile  README.md  appsec_sast_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_sast/tools/: __init__.py  bearer_tool.py  horusec_tool.py  semgrep_tool.py  sonarqube_tool.py
mcpservers/appsec_sca/: Dockerfile  README.md  appsec_sca_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_sca/tools/: __init__.py  dependency_check_tool.py  retire_js_tool.py  syft_tool.py
mcpservers/appsec_secrets/: Dockerfile  README.md  appsec_secrets_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_secrets/tools/: __init__.py  gitguardian_tool.py  gitleaks_tool.py  trufflehog_tool.py
mcpservers/appsec_supply_chain/: Dockerfile  README.md  appsec_supply_chain_mcp.py  docker-compose.yml  pyproject.toml  requirements.txt
mcpservers/appsec_supply_chain/tools/: __init__.py  openssf_scorecard_tool.py
mcpservers/prowler/: prowler_mcp.sh
mcpservers/recon/: APPLICATION_SECURITY_TOOLS_MIGRATION_PLAN.md  ARCHITECTURE_SUMMARY.md  CONTAINERIZED_DEPLOYMENT_ARCHITECTURE.md  MULTI_SERVER_ARCHITECTURE_PROPOSAL.md  README.md  SINGLE_VS_MULTI_SERVER_COMPARISON.md  TOOL_MIGRATION_CHECKLIST.md  recon_mcpserver.py  requirements.txt  run_recon_mcp.sh
mcpservers/recon/tools/: __init__.py  example_cli_tool.py  example_python_tool.py
