[project]
name = "appsec-iac-mcp"
version = "0.1.0"
description = "IaC Security MCP Server (Checkov, Terrascan)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "hd-logging>=1.0.0",
]

[project.scripts]
appsec-iac-mcp = "appsec_iac_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

