[project]
name = "appsec-mobile-mcp"
version = "0.1.0"
description = "Mobile Security MCP Server (MobSF)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "hd-logging>=1.0.0",
]

[project.scripts]
appsec-mobile-mcp = "appsec_mobile_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

