[project]
name = "appsec-sast-mcp"
version = "0.1.0"
description = "SAST MCP Server for Application Security Tools (Semgrep, SonarQube, Horusec, Bearer)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "hd-logging>=1.0.0",
]

[project.scripts]
appsec-sast-mcp = "appsec_sast_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

