[project]
name = "appsec-sca-mcp"
version = "0.1.0"
description = "SCA MCP Server for Application Security Tools (Syft, Dependency-Check, Retire.js)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "hd-logging>=1.0.0",
]

[project.scripts]
appsec-sca-mcp = "appsec_sca_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

