[project]
name = "appsec-supply-chain-mcp"
version = "0.1.0"
description = "Supply Chain Security MCP Server (OpenSSF Scorecard)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.5",
    "hd-logging>=1.0.0",
]

[project.scripts]
appsec-supply-chain-mcp = "appsec_supply_chain_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

